# Agentic_ML_Engineer

./: .gitignore  README.md  pyproject.toml
notebooks/: eda_summary.json  langgraph_agents.ipynb  test_agents.ipynb
src/: streamlit_app.py
src/Agents/: EDA_agent.py  agent_manager.py  base_agent.py
src/Graph/: nodes.py  state.py  workflow.py
src/services/: llm_service.py
src/tools/: file_tools.py  utils.py
src/utils/: logger.py
